# fs-builder

./: Dockerfile
mods/mod_audio_fork/: lws_glue.cpp
patches/: Makefile.patch  configure.patch  modules.patch  switch_core.patch  switch_types.patch  switch_xml.patch
scripts/: installer.sh
src/: switch_core.c  switch_rtp.c  switch_xml.c
src/libs/: cc.h  fs_cli.c
src/mod_audio_fork/: Makefile.am  audio_pipe.cpp  mod_audio_fork.c
src/mod_event_kafka/: Makefile.am
src/patches/: configure.patch  mod_lua.patch  modules.patch  switch_core.patch
test/: Dockerfile  event_multicast.conf.xml  event_socket.conf.xml  locationforeign.lua  locationlocal.lua  lua.conf.xml  startup_script_1.lua
